                    *************************
                    ** afex VERSION 0.26-x **
                    *************************
                    
                    Changes in afex Version 0.26-x
                    Released January 2020
                    
    Significant User Visible Changes and New Features
    
    o           

    Bugfixes

    o   msq data set is now part of psychTools and not of psych. 
        Fixes CRAN check issues.


                    *************************
                    ** afex VERSION 0.25-x **
                    *************************
                    
                    Changes in afex Version 0.25-x
                    Released August 2019
                    
    Significant User Visible Changes and New Features
    
    o   Better error messages for ANOVA in some case in which data shows 
        structural problems (e.g., missing design cells).
        
    o   afex_plot() now first draws all graphical elements belonging to a 
        specific factor level, before drawing graphical elements belonging to 
        the next factor level in interaction plots (does not apply to data in 
        the background). This avoids inconsistencies in plotting order between
        error bars and connecting lines.
        

    Bugfixes

    o   Correct Type III ANOVA results for character variables if 
        factorize = FALSE.
        
    o   afex_plot() for mixed or merMod objects uses actual dv on y-axis.
    
    o   afex_plot() x-labels and legend-title display correctly in case more 
        than one variable is displayed.
        
    o   The default method for afex_plot() can now aggregate via the id argument 
        even if the corresponding factor is only part if the random effects 
        terms (see rstanarm examples in vignette).
        
    o   Removed certain non-ASCII characters in examples:
        https://github.com/singmann/afex/issues/66



                    *************************