@@ -70,5 +70,5 @@ Authors@R: c(person(given="Henrik", family="Singmann", role=c("aut", "cre"),
          person(given="Russell", family="Lenth", role=c("ctb")), 
          person(given="Rune", family="Haubo Bojesen Christensen", role=c("ctb")))
 Version: 0.26-0
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 LazyData: true
