@@ -7,7 +7,13 @@
                     
     Significant User Visible Changes and New Features
     
-    o           
+    o   factor_level argument of afex_plot() now accepts named character vectors
+        which allows: 
+        (1) renaming only a subset of factor levels (if only a subset of levels 
+            is specified) 
+        (2) reordering in which order factor levels are shown in the plot (order
+            of names within a list element determine order that will be used for
+            plotting)
 
     Bugfixes
 
